Working table, images, filter, individual shows, some css

--- a/public/templates/shows/index.html
+++ b/public/templates/shows/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header class="navbar">
-    <div><strong>Site Header</strong></div>
+    <div><strong>Vortex Trade List</strong></div>
     <nav>
       <a href="/">Home</a>
       <a href="/shows/">Browse Shows</a>
@@ -40,7 +40,7 @@
   </main>
 
   <footer style="padding: 2rem; text-align: center; font-size: 0.85rem; color: #888;">
-    © 2025
+   Vortex © 2025
   </footer>
 </body>
 </html>
