--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -41,7 +41,9 @@ table {
 th, td {
   border: 1px solid #d6e4f0;
   padding: 10px;
-  font-size: 14px;
+  font-size: 13px;
+  text-align: center;
+  vertical-align: middle;
 }
 
 th {
