--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="navbar">
-    <div><strong>Site Header</strong></div>
+    <div><strong>Vortex Trade List</strong></div>
     <nav>
       <a href="/">Home</a>
       <a href="/shows/">Browse Shows</a>
@@ -20,7 +20,7 @@
   </main>
 
   <footer style="padding: 2rem; text-align: center; font-size: 0.85rem; color: #888;">
-    © 2025
+   Vortex © 2025
   </footer>
 </body>
 </html>
