--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -65,3 +65,29 @@ footer {
   color: #aaa;
   background-color: #f4f9ff;
 }
+
+.source-wrapper {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+}
+
+.show-label {
+  position: absolute;
+  top: -15px;
+  right: -10px;
+  font-size: 10px;
+  padding: 1px 6px;
+  font-weight: bold;
+  border-radius: 5px;
+  color: #000;
+  white-space: nowrap;
+}
+
+.label-show1 {
+  background-color: #f7c5c5;
+}
+
+.label-show2 {
+  background-color: #b4d9f8;
+}
