--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -66,6 +66,34 @@ footer {
   background-color: #f4f9ff;
 }
 
+.type-cell {
+  position: relative;
+}
+
+.type-label {
+  padding: 1px 6px;
+  font-size: 9px;
+  font-weight: bold;
+  border-radius: 6px;
+  color: 000;
+  text-transform: uppercase;
+  pointer-events: none;
+}
+
+.audio-label {
+  position: absolute;
+  top: 0px;
+  right: 10px;
+  background-color: #4CAF50;
+}
+
+.misc-label {
+  position: absolute;
+  top: 0px;
+  right: 13px;
+  background-color: #FFA726;
+}
+
 .source-wrapper {
   position: relative;
   display: inline-block;
@@ -75,19 +103,82 @@ footer {
 .show-label {
   position: absolute;
   top: -15px;
-  right: -10px;
-  font-size: 10px;
+  right: 13px;
+  font-size: 9px;
   padding: 1px 6px;
   font-weight: bold;
-  border-radius: 5px;
+  border-radius: 6px;
   color: #000;
   white-space: nowrap;
 }
 
 .label-show1 {
-  background-color: #f7c5c5;
+  background-color: #FFB74D;
 }
 
 .label-show2 {
-  background-color: #b4d9f8;
+  background-color: #42A5F5;
+}
+
+.trade-label {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  font-size: 9px;
+  padding: 1px 6px;
+  font-weight: bold;
+  border-radius: 6px;
+  color: #000;
+  white-space: nowrap;
+}
+.trade-label.red {
+  background-color: #f4b4b4;
+}
+.trade-label.blue {
+  background-color: #b4d9ff;
+}
+
+.trade-label.master {
+  position: absolute;
+  top: 0px;
+  right: 26px;
+  font-size: 9px;
+  padding: 1px 6px;
+  background-color: #CE93D8;
+  color: #000;
+  font-weight: bold;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+
+.rules-block {
+  background-color: #f6f8fa;
+  border: 0px solid #d0d7de;
+  border-top: 2px solid #d0d7de;
+  border-bottom: 1px solid #d0d7de;
+  border-left: 20px solid #d0d7de;
+  border-right: 2px solid #d0d7de;
+  padding: 3px;
+  line-height: 0.95;
+  white-space: pre-line;
+  border-radius: 10px;
+  max-width: 740px;
+  margin: 0px 0;
+}
+
+h1, h2, h3 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 600;
+  letter-spacing: -0.25px;
+}
+
+.year-label-row td.year-label,
+.band-label-row td.band-label {
+  background-color: #333;
+  color: #eee;
+  font-weight: bold;
+  padding: 6px 10px;
+  font-size: 13px;
+  text-align: left;
+  border-top: 2px solid #444;
 }
