--- a/public/templates/shows/index.html
+++ b/public/templates/shows/index.html
@@ -16,6 +16,7 @@
     <nav>
       <a href="/">Home</a>
       <a href="/shows/">Browse Shows</a>
+	  <a href="/updates/">Updates</a>
     </nav>
   </header>
 
