--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -72,7 +72,7 @@ footer {
 
 .type-label {
   padding: 1px 6px;
-  font-size: 9px;
+  font-size: 8px;
   font-weight: bold;
   border-radius: 6px;
   color: 000;
@@ -91,7 +91,7 @@ footer {
   position: absolute;
   top: 0px;
   right: 13px;
-  background-color: #FFA726;
+  background-color: #4CAF50;
 }
 
 .source-wrapper {
@@ -104,7 +104,7 @@ footer {
   position: absolute;
   top: -15px;
   right: 13px;
-  font-size: 9px;
+  font-size: 8px;
   padding: 1px 6px;
   font-weight: bold;
   border-radius: 6px;
@@ -113,7 +113,7 @@ footer {
 }
 
 .label-show1 {
-  background-color: #FFB74D;
+  background-color: #42A5F5;
 }
 
 .label-show2 {
@@ -124,7 +124,7 @@ footer {
   position: absolute;
   top: 0px;
   right: 0px;
-  font-size: 9px;
+  font-size: 8px;
   padding: 1px 6px;
   font-weight: bold;
   border-radius: 6px;
@@ -132,17 +132,17 @@ footer {
   white-space: nowrap;
 }
 .trade-label.red {
-  background-color: #f4b4b4;
+  background-color: #CD5C5C;
 }
 .trade-label.blue {
-  background-color: #b4d9ff;
+  background-color: #42A5F5;
 }
 
 .trade-label.master {
   position: absolute;
   top: 0px;
   right: 26px;
-  font-size: 9px;
+  font-size: 8px;
   padding: 1px 6px;
   background-color: #CE93D8;
   color: #000;
@@ -174,11 +174,30 @@ h1, h2, h3 {
 
 .year-label-row td.year-label,
 .band-label-row td.band-label {
-  background-color: #333;
+  background-color: #7F7D9C;
   color: #eee;
   font-weight: bold;
   padding: 6px 10px;
   font-size: 13px;
   text-align: left;
   border-top: 2px solid #444;
+}
+
+.created-label-row td.created-label {
+  background-color: #7F7D9C;
+  color: #eee;
+  font-weight: bold;
+  padding: 6px 10px;
+  font-size: 13px;
+  text-align: left;
+  border-top: 2px solid #444;
+}
+
+.category-label {
+  background-color: #e4e4e4;
+  color: #333;
+  font-weight: bold;
+  font-size: 14px;
+  padding: 6px 10px;
+  text-align: left;
 }
