deploy: 8029e0a6c31cf0de76dc71a4ae31cfc85361564b

--- a/templates/shows/index.html
+++ b/templates/shows/index.html
@@ -15,8 +15,8 @@
     <div><strong>Vortex Trade List</strong></div>
     <nav>
       <a href="/">Home</a>
-	  <a href="/tradelist/shows/">Browse Shows</a>
-	  <a href="/tradelist/updates/">Updates</a>
+	 <a href="/shows/">Browse Shows</a>
+	 <a href="/updates/">Updates</a>
     </nav>
   </header>
 
