--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -10,9 +10,9 @@
   <header class="navbar">
     <div><strong>Vortex Trade List</strong></div>
     <nav>
-      <a href="/">Home</a>
-	 <a href="{{ '/shows/' | url }}">Browse Shows</a>
-	 <a href="{{ '/updates/' | url }}">Updates</a>
+      <a href="{{ '/tradelist/' | url }}">Home</a>
+	  <a href="{{ '/tradelist/shows/' | url }}">Browse Shows</a>
+	  <a href="{{ '/tradelist/updates/' | url }}">Updates</a>
     </nav>
   </header>
 
