--- a/templates/shows/index.html
+++ b/templates/shows/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="/tradelist/styles/global.css">
+	<link rel="stylesheet" href="./styles/global.css">
     <meta charset="UTF-8">
     <title>
   
@@ -14,8 +14,8 @@
   <header class="navbar">
     <div><strong>Vortex Trade List</strong></div>
     <nav>
-	  <a href="/tradelist/">Home</a>
-	  <a href="/tradelist/shows/">Shows</a>
+      <a href="/">Home</a>
+	  <a href="/tradelist/shows/">Browse Shows</a>
 	  <a href="/tradelist/updates/">Updates</a>
     </nav>
   </header>
