--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="{{ '/styles/global.css' | url }}">
+	<link rel="stylesheet" href="/tradelist/styles/global.css">
     <meta charset="UTF-8">
     <title>{% block title %}Untitled{% endblock %}</title>
 </head>
@@ -10,9 +10,9 @@
   <header class="navbar">
     <div><strong>Vortex Trade List</strong></div>
     <nav>
-	  <a href="{{ '/' | url }}">Home</a>
-	  <a href="{{ '/shows/' | url }}">Shows</a>
-	  <a href="{{ '/updates/' | url }}">Updates</a>
+	  <a href="/tradelist/">Home</a>
+	  <a href="/tradelist/shows/">Browse Shows</a>
+	  <a href="/tradelist/updates/">Updates</a>
     </nav>
   </header>
 
