fixes on individual shows | updates

--- a/src/updates.njk
+++ b/src/updates.njk
@@ -105,7 +105,7 @@
           {% endif %}
         </td>
         <td>
-          <a href="/shows/{{ show.fileSlug }}/" title="View" style="font-size: 1.2em;">📝</a>
+          <a href="{{ show.permalink | url }}" title="View" style="font-size: 1.20em;">📝</a>
         </td>
       </tr>
     {% endfor %}
