refactor individual pages | Fix of labels after Size

--- a/src/templates/show-page.njk
+++ b/src/templates/show-page.njk
@@ -1,6 +1,6 @@
 ---
 pagination:
-  data: shows       # refer to the global data array “shows”
+  data: shows       # refer to the global data array "shows"
   size: 1
   alias: show
 permalink: "/shows/{{ show.fileSlug }}/"
